--- a/components/base/Header/Header.module.scss
+++ b/components/base/Header/Header.module.scss
@@ -12,10 +12,10 @@
         margin-top: 20px;
     }
     margin: 0px auto;
-    width: 1600px;
+    width: 1400px;
     
     @media (max-width: 1700px) {
-        width: 1440px;
+        width: 1400px;
     }
     
     @media (max-width: 1500px) {
